--- a/hello-world.html
+++ b/hello-world.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <title>Profil Diri</title>
-      <link rel="icon" href="logotab.png">
+      <link rel="icon" href="sharkbloblogocrop.png">
     </head>
 
 <body>
