--- a/hello-world.html
+++ b/hello-world.html
@@ -80,22 +80,22 @@
         </thead>
         <tbody>
             <tr>
-                <td>HMTI Udayana</td>
+                <td>PARASUGENI</td>
                 <td>Anggota</td>
-                <td>2023-2024</td>
-                <td>Aktif dalam kegiatan teknologi informasi</td>
+                <td>2025</td>
+                <td>Aktif dalam kegiatan theater</td>
             </tr>
             <tr>
-                <td>Komunitas Programming</td>
-                <td>Sekretaris</td>
-                <td>2023-Sekarang</td>
-                <td>Mengorganisir workshop coding</td>
+                <td>UKM Debat</td>
+                <td>Anggota</td>
+                <td>2025</td>
+                <td>Menjuarai Debat Teman</td>
             </tr>
             <tr>
-                <td>Volunteer Event IT</td>
-                <td>Coordinator</td>
-                <td>2022-2023</td>
-                <td>Mengelola acara seminar teknologi</td>
+                <td>Event SPORTI</td>
+                <td>Acara</td>
+                <td>2025</td>
+                <td>Menjadi timekeeper di acara lomba antar angkatan</td>
             </tr>
         </tbody>
     </table>
