--- a/hello-world.html
+++ b/hello-world.html
@@ -14,7 +14,7 @@
     
 <center>
         <b>Sosial Media:</b>
-         <a href="https://linkedin.com/in/gideon-suharman-8b7b27240" target="_blank">LinkedIn</a>
+         <a href="https://linkedin.com/in/gideon-suharman-8b7b27240" target="_blank">LinkedIn</a> |
          <a href="https://instagram.com/gideo_on" target="_blank">Instagram</a>
     
 
